# Gtest_Practice

./: README.md
Basics/: lec_1.cpp
app/: Program1.cpp  Program2.cpp  Stack_Test.cpp  app  ls.cpp  readme.md  unit_test1.cpp
fib_project/: MODULE.bazel  WORKSPACE  bazel-bin  bazel-fib_project  bazel-out  bazel-testlogs
fib_project/fib/: BUILD.bazel
fib_project/src/: BUILD.bazel  DataBaseConnect.h  calculator.cc  calculator.h  fib.cc  fib.h  mock.cc  mock.h
fib_project/test/: BUILD.bazel  calc_test.cc  fib_test.cc  mock_test.cc
