# load("@rules_cc//cc:defs.bzl", "cc_test")


cc_test(
    name = "fib_test",
    size = "small",
    srcs = ["fib_test.cc"],
    deps = [
       "//src:fiblib",
       "@googletest//:gtest_main",
    ],
)



cc_test(
    name = "calc_test",
    size = "small",
    srcs = ["calc_test.cc"],
    deps = [
         "//src:calc",
         "@googletest//:gtest_main",
    ]
)


cc_test(
    name = "mock_test",
    srcs = ["mock_test.cc"],
    deps = [
        "//src:mock_lib",
        "@googletest//:gtest_main",
    ],
)



# cc_library(
#     name = "mock_test_lib",
#     srcs = ["mock_test.cc"],
#     deps = [
#         "@googletest//:gtest",
#         "@googletest//:gmock",
#         "//src:mock_lib", 
#     ],
# )

# cc_binary(
#     name = "mock_test_bin",
#     srcs = ["test_main.cc"],
#     deps = [":mock_test_lib"],
# )

# cc_test(
#     name = "mock_test",
#     srcs = ["test_main.cc"],
#     deps = [":mock_test_lib"],
# )
